# nexAgent

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose-dokploy.yml  docker-compose.dev.yml  langgraph.json  pyproject.toml
.github/: copilot-instructions.md
alembic/: env.py
alembic/versions/: 001_create_nexagent_schema.py  002_tool_definitions.py  003_sub_agents_orchestrators_workflows.py  004_executions_lanes_steps.py  005_execution_emit_buffer.py
docs/blueprint/: ARCHITECTURE.md  DATABASE.md
docs/sprints/: README.md
docs/sprints/s1-foundation/: README.md
docs/sprints/s2-tool-management/: README.md
docs/sprints/s3-sub-agent-management/: README.md
docs/sprints/s4-orchestrator-workflows/: README.md
docs/sprints/s5-execution-engine/: README.md
docs/sprints/s6-timeline-observability/: README.md
docs/sprints/s7-security-production/: README.md
src/nexagent/: __init__.py  config.py  database.py
src/nexagent/agents/: chat.py
src/nexagent/api/: __init__.py  canvas_router.py  dashboard_router.py  executions_router.py  orchestrators_router.py  routes.py  sub_agents_router.py  tools_router.py  workflows_router.py
src/nexagent/engine/: __init__.py  capability_map.py  emit_buffer.py  (+4 more)
tests/: conftest.py  test_crypto.py  test_emit_buffer.py  test_execution_service.py  test_graph.py  test_lane_manager.py  test_models.py  test_orchestrator_workflow.py  test_s3_s4_api.py  test_s3_s4_models.py  test_s5_s6_api.py  test_s5_s6_models.py  test_sub_agent_service.py  test_tool_executor.py  test_tool_service.py  test_tools_api.py
(+32 files in other folders)
