[project]
name = "nexagent"
version = "0.1.0"
description = "NexAgent — LangGraph-based AI agent platform with tool calling, sub-agents, and graph visualization"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.4,<1.0",
    "langgraph-cli[inmem]>=0.4,<1.0",
    "langgraph-api>=0.1,<1.0",
    "langchain-core>=0.3,<1.0",
    "langchain-openai>=0.3,<1.0",
    "langchain-anthropic>=0.3,<1.0",
    "langchain-community>=0.3,<1.0",
    "langsmith>=0.3,<1.0",
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.34,<1.0",
    "httpx>=0.28,<1.0",
    "python-dotenv>=1.0,<2.0",
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nexagent"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
